Reduce impact with hoppers